--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "14.x",
+    "npm": "7.x"
+  },
   "devDependencies": {
     "tailwindcss": "^3.3.6"
   },
